# learn-bazel

./: .gitignore  AGENTS.md  MODULE.bazel  README.md  TODO.md
.bazel-cache/: .gitkeep
.devcontainer/: README.md  devcontainer.json  setup.sh
docs/: 01-history.md  02-tech-stack.md  03-core-concepts.md  04-resources.md
examples/basic/: README.md
examples/basic/hello-c/: BUILD  MODULE.bazel  README.md  WORKSPACE  hello.c
examples/basic/hello-cpp/: BUILD  MODULE.bazel  README.md  WORKSPACE  greeting.cpp  greeting.h  main.cpp
examples/basic/hello-rust/: BUILD  MODULE.bazel  README.md  WORKSPACE
examples/basic/hello-rust/src/: lib.rs  main.rs
examples/basic/hello-rust/src/scripts/: lint-all.sh
examples/codegen/: BUILD  MODULE.bazel  README.md  WORKSPACE  config.yaml  generate.py
examples/codegen/src/: main.c  main.rs
examples/codegen/templates/: BUILD  constants.rs.j2  header.h.j2
